--- a/plagozny.pl/edukacja.html
+++ b/plagozny.pl/edukacja.html
@@ -12,14 +12,14 @@
     <title>Przemysław Łagożny - moje spojrzegnie na Futbol</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +30,7 @@
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-
+ 
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -55,7 +55,7 @@
                 <li><a href="omnie.html">O mnie</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Doświadczenie <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Doświadczenie <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="edukacja.html">Edukacja</a></li>
                     <li><a href="praca.html">Praca</a></li>
@@ -145,6 +145,7 @@
     </div><!-- /.carousel -->
 
 
+
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -155,16 +156,31 @@
       <div class="row">
        <div class="col-md-12">
           
-          <h2><img src="img/small.png" class="img-circle" style="width:100px;"></i> O mnie</h2>
-          <p class="lead">Cześć nazywam się Przemek. Pochodzę z Biłgoraja. Tam jako młody chłopak rozpocząłem swoją przygodę z Futbolem. Następnie przeprowadziłem się do Łodzi, by uczyć się i reprezentować barwy tamtejszej Szkoły Mistrzostwa Sportowego. To właśnie w Łodzi uczyniłem swój pierwszy krok w kierunku szkoleniowym, kończąc kurs Instruktora Piłki Nożnej. Obecnie posiadam tytuł trenera II klasy oraz licencję trenerską UEFA B. Aby poszerzyć wiedzę na temat sportu, funkcjonowania człowieka i wykorzystaniu potencjału drzemiącego w ludzkim organizmie, ukończyłem studia na Warszawskim AWF. Mam za sobą cztery lata pracy w Legii Warszawa, jako trener, II trener z drużynami Futbolu siedmioosobowego i dziewięcioosobowego. Pracowałem również jako scout klubu Legia Warszawa. Wiem, jak pracować z najmłodszymi adeptami Futbolu dzięki doświadczeniu nabytemu w projekcie Legia Soccer Schools (również pełniący obowiązki koordynatora jednego z oddziałów) czy pracy z młodzieżą podczas obozów piłkarskich. 
-          </p>
-           <p class="lead">Nauka, fachowa wiedza, doświadczenie - to niezwykle ważne składniki w pracy szkoleniowej. Dlatego sam pogłębiam swoją wiedzę, uczestnicząc w licznych konferencjach, kursach i szkoleniach. Zarówno w kraju jak i zagranicą. Dzięki piłce nożnej miałem przyjemność zwiedzić wiele krajów oraz poznać ludzi z całego świata. Poprzez spotkania, wspólne rozmowy poświęcone aspektom szkoleniowym, mogę rozwijać się i poszerzać swoje horyzonty patrzenia na piłkę. Świat piłki nożnej pozwolił mi na poznanie oraz doskonalenie języków obcych. Dziś mogę powiedzieć, że bez problemu komunikuję się w języku hiszpańskim oraz angielskim. 
+          <h2> <i class="icon-graduation-cap"></i>Edukacja</h2>
+          <br/>
+          <h3>Piłkarski rozwój</h3>
+          <ul>
+            <li><p class="lead">2016- Szkolenie: Soccer Services: (kurs Ekkono level 2, Kleszczów)</p></li>
+            <li><p class="lead">2016- Konferencja: Taktyka oraz analiza gry z elementami psychologii w piłce nożnej (Katowice)</p></li>
+            <li><p class="lead">2016- Szkolenie: Brakujący element, inteligencja emocjonalna- szkolenie prowadził Rafał Kubow </p></li>
+            <li><p class="lead">2015- III Międzynarodowa Konferencja dla Trenerów Piłki nożnej (Łódź)</p></li>
+            <li><p class="lead">2015- Konferencja/ szkolenie: The best way to develop a Talent (Prelegenci Ajax Amsterdam, Warszawa)</p></li>
+            <li><p class="lead">2015- ANGLIA: Staż Tottenham Hotspu FC (7 dni) </p></li>
+            <li><p class="lead">2015- Szkolenie: Analiza piłkarska 2.0 Rozpoznanie, wiedza, zastosowanie</p></li>
+            <li><p class="lead">2015- Kurs: Trener II Klasy Piłka nożna (Kurs organizowany przez AWF Warszawa)</p></li>
+            <li><p class="lead">2014- HISZPANIA: Staż w akademii piłkarskiej Malaga Club de Futbol (2 tygodnie)</p></li>
+            <li><p class="lead">2013 UEFA B (kurs organizowany przy współpracy PZPN oraz DFB)</p></li>
+            <li><p class="lead">2011 Kurs instruktora piłki nożnej organizowany przez Wyższą Szkołę Sportową w Łodzi</p></li>
 
-          </p>
-           <p class="lead">Uważam, że w życiu nie ma rzeczy niemożliwych, a marzenia są po to, by je spełniać! Obecnie mieszkam w pięknej Maladze. Nawiązałem współpracę z klubem hiszpańskiej Primera Division: Malaga Club de Futbol, gdzie w rundzie jesiennej sezonu 2016/2017 z bliska uczestniczę w procesie szkoleniowym i rozwoju piłkarskiej akademii
-
-          </p>
-          <img src="img/omnie.png" style="width:1140px;">
+          </ul>
+         <br>
+         <h3>Wykształcenie</h3>
+         <ul>
+           <li><p class="lead">2014- 2016 Akademia Wychowania Fizycznego Józefa Piłsudzkiego w Warszawie (studia magisterskie)</p></li>
+           <li><p class="lead">2011 - 2014 Akademia Wychowania Fizycznego Józefa Piłsudzkiego w Warszawie (studia licencjackie)</p></li>
+           <li><p class="lead">2008 - 2011 Liceum Ogólnokształcące Szkoły Mistrzostwa Sportowego  im. Kazimierza Górskiego w Łodzi</p></li>
+           <li><p class="lead">2007 - 2008  Gimnazjum Szkoły Mistrzostwa Sportowego im. Kazimierza Górskiego w Łodzi</p></li>
+         </ul>
         </div><!-- /.col-lg-4 -->
         
       </div><!-- /.row -->
@@ -185,11 +201,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script src="js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
