--- a/plagozny.pl/kontakt.html
+++ b/plagozny.pl/kontakt.html
@@ -12,14 +12,14 @@
     <title>Przemysław Łagożny - moje spojrzegnie na Futbol</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -53,7 +53,7 @@
               <ul class="nav navbar-nav">
                 <li ><a href="https://www.facebook.com/lagozny/" target="_blank">Aktualności</a></li>
                 <li><a href="omnie.html">O mnie</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li class="active" ><a href="kontakt.html">Kontakt</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Doświadczenie <span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -158,7 +158,7 @@
           <br/>
           <p class="lead"><b>Przemysław Łagożny </b></p>
            <p class="lead"><i class="demo-icon icon-mail"></i>  p.lagozny@hotmail.com</p>
-           <p class="lead"><a href="#"><i class="demo-icon icon-facebook-squared"></i> Przemysław Łagożny - moje sporzenie na Futbol</a></p>
+           <p class="lead"><a href="https://www.facebook.com/lagozny/" target="_blank"><i class="demo-icon icon-facebook-squared"></i> Przemysław Łagożny - moje sporzenie na Futbol</a></p>
          
         </div><!-- /.col-lg-4 -->
         
@@ -180,11 +180,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script src="js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
