content-related updates

--- a/plagozny.pl/edukacja.html
+++ b/plagozny.pl/edukacja.html
@@ -160,6 +160,8 @@
           <br/>
           <h3>Piłkarski rozwój</h3>
           <ul>
+           <li><p class="lead">2016- HISZPANIA: Malaga Club de Futbol (współpraca z klubem podczas rundy jesiennej sezonu 2016/2017)</p></li>
+           <li><p class="lead">2016- HISZPANIA: staż w Espanyol Barcelona </p></li>
             <li><p class="lead">2016- Szkolenie: Soccer Services: (kurs Ekkono level 2, Kleszczów)</p></li>
             <li><p class="lead">2016- Konferencja: Taktyka oraz analiza gry z elementami psychologii w piłce nożnej (Katowice)</p></li>
             <li><p class="lead">2016- Szkolenie: Brakujący element, inteligencja emocjonalna- szkolenie prowadził Rafał Kubow </p></li>
