--- a/plagozny.pl/omnie.html
+++ b/plagozny.pl/omnie.html
@@ -164,6 +164,8 @@
            <p class="lead">Uważam, że w życiu nie ma rzeczy niemożliwych, a marzenia są po to, by je spełniać! Obecnie mieszkam w pięknej Maladze. Nawiązałem współpracę z klubem hiszpańskiej Primera Division: Malaga Club de Futbol, gdzie w rundzie jesiennej sezonu 2016/2017 z bliska uczestniczę w procesie szkoleniowym i rozwoju piłkarskiej akademii
 
           </p>
+          <p class="lead">Obecnie związany jestem z Legią Warszawa gdzie na co dzień pracuję z drużynami do lat 17,16 oraz 11.
+          </p>
           <img src="img/omnie.png" style="width:1140px;">
         </div><!-- /.col-lg-4 -->
         
