--- a/plagozny.pl/praca.html
+++ b/plagozny.pl/praca.html
@@ -160,8 +160,8 @@
           <br/>
           <h3>Trener</h3>
           <ul>
-          <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Trener Asystent U-16/U-17 Legia Warszawa</p></li>
-          <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Trener U-11 Legia Warszawa</p></li>
+          <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Legia Warszawa U17/U16 - Trener Asystent</p></li>
+          <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Legia Warszawa U11 - Trener</p></li>
           <li><p class="lead">Sezon: 2016-2017 (runda jesienna) Malaga Club de Futbol (Cadete Division de Honor) </p></li>
             <li><p class="lead">Sezon: 2015-2016 Pierwszy trener w Akademii Piłkarskiej Legii Warszawa (zespół 2006) </p></li>
             <li><p class="lead">Sezon: 2015- 2016 (sierpień- wrzesień) Asystent Trenera w Akademii Piłkarskiej Legii Warszawa (zespół 2003) </p></li>
