some content-relatet changes

--- a/plagozny.pl/edukacja.html
+++ b/plagozny.pl/edukacja.html
@@ -128,6 +128,7 @@
       <br/>
       <h3>Piłkarski rozwój</h3>
       <ul>
+        <li><p class="lead">2017- Prelegent na konferencji organizowanej przez Stowarzyszenie Trenerów Piłki Nożnej w Warszawie pt. „Trenerzy- Trenerom- z doświadczeń Polskich i Zagranicznych” (01-02.05.2017r)</p></li>
         <li><p class="lead">2016- HISZPANIA: Malaga Club de Futbol (współpraca z klubem podczas rundy jesiennej sezonu 2016/2017)</p></li>
         <li><p class="lead">2016- HISZPANIA: staż w Espanyol Barcelona </p></li>
         <li><p class="lead">2016- Szkolenie: Soccer Services: (kurs Ekkono level 2, Kleszczów)</p></li>
