--- a/plagozny.pl/media.html
+++ b/plagozny.pl/media.html
@@ -194,6 +194,27 @@
       Wywiad po współpracy z Malaga Club de Futbol w sezonie 2016/17
     </div>
   </div>
+   <div class="media">
+    <div class="media-left">
+      <a href="http://www.stpn.com.pl/pl/97/Konferencja_STPN" target="_blank">
+        <img class="media-object " src="img/stpn.png" style="width:90px; margin-right: 20px; margin-left: 30px">
+      </a>
+    </div>
+    <div class="media-body media-middle">
+      <h4 class="media-heading" style="padding-left: 20px;">Prelegent na konferencji organizowanej przez Stowarzyszenie Trenerów Piłki Nożnej
+    </div>
+  </div>
+   <div class="media">
+    <div class="media-left">
+      <a href="http://legia.com/aktualnosci/od-lss-przez-akademie-do-pierwszej-druzyny-55649" target="_blank">
+        <img class="media-object " src="img/legia.png" style="width:90px; margin-right: 20px; margin-left: 30px">
+      </a>
+    </div>
+    <div class="media-body media-middle">
+      <h4 class="media-heading" style="padding-left: 20px;"">o mojej ścieżce od akademii do I zespołu w klubie Legia Warszawa
+    </div>
+  </div>
+
 
   <footer>
     <p>&copy; 2016 plagozny.pl &middot;</p>
