--- a/plagozny.pl/praca.html
+++ b/plagozny.pl/praca.html
@@ -129,6 +129,7 @@
       <br/>
       <h3>Trener</h3>
       <ul>
+        <li><p class="lead">Sezon: 2017-2018 Legia Warszawa I zespół- Trener Analityk</p></li>
         <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Legia Warszawa U17/U16 - Trener Asystent</p></li>
         <li><p class="lead">Sezon: 2016-2017 (runda wiosenna) Legia Warszawa U11 - Trener</p></li>
         <li><p class="lead">Sezon: 2016-2017 (runda jesienna) Malaga Club de Futbol (Cadete Division de Honor) </p></li>
