icons changed to fontawesome

--- a/plagozny.pl/src/index.html
+++ b/plagozny.pl/src/index.html
@@ -11,6 +11,19 @@
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>    
+    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyDOKPgVmEdAs50CDC3hI50pFe4lUsZX8Kg",
+          authDomain: "plagozny-943d2.firebaseapp.com",
+          databaseURL: "https://plagozny-943d2.firebaseio.com",
+          projectId: "plagozny-943d2",
+          storageBucket: "plagozny-943d2.appspot.com",
+          messagingSenderId: "244728201736"
+        };
+        firebase.initializeApp(config);
+      </script>
     <script src="js/bundle.min.js"></script>
 </body>
 </html>
